# menuinst

./: .authors.yml  .gitattributes  .gitignore  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CHANGES.txt  HOW_WE_USE_GITHUB.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  TODO.txt  appveyor.yml  build.sh  cwp.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/workflows/: docs.yml  tests.yml  update.yml
appinst/: __init__.py  api.py  appinst.c  application_menus.py  common.py  darwin.py  dat_file.py  file_tools.py  freedesktop.py  linux.py  linux2.py  linux_common.py  linux_shortcuts.py  osx.py  osx_application.py  readme.txt  rh3.py  rh4.py  utils.py  win32.py  win32_common.py  wininst.c
appinst/shortcuts/: rh3.py  rh4.py  shortcut_creation_error.py  util.py
dev/vendoring/: vendor.txt
docs/: conda-recipes.rst  conf.py  configuration.rst  environment.yml  faq.rst  index.rst
docs/design/: design-custom-placeholders.md
docs/source/: conda.md  conf.py  defining-shortcuts.md  development.md  getting-started.md  index.md  placeholders.md  reference.md  robots.txt  schema.md
menuinst/: __init__.py  _schema.py  _version.py  api.py  conda_plugin.py  convert.py  csidl.py  darwin.py  freedesktop.py  knownfolders.py  knownpaths.py  linux.py  main.py  mk_menus.bat  schema.py  utils.py  win32.py  win_elevate.py  wininst.c  winshortcut.cpp
menuinst/_legacy/: __init__.py  cwp.py  linux.py  main.py  utils.py  win32.py
menuinst/cli/: __init__.py  cli.py  plugin.py
menuinst/data/: appkit_launcher_arm64  appkit_launcher_x86_64  menuinst-1-0-0.default.json  menuinst-1-0-0.schema.json  menuinst-1-0-1.schema.json  menuinst-1-1-0.default.json  menuinst-1-1-0.schema.json  menuinst-1-1-1.default.json  menuinst-1-1-1.schema.json  menuinst-1-1-2.default.json  menuinst-1-1-2.schema.json  menuinst-1-1-3.default.json  menuinst-1-1-3.schema.json  menuinst-1.default.json  menuinst-1.schema.json  menuinst.default.json  menuinst.menu_item.default.json  menuinst.schema.json
menuinst/linux/: __init__.py  freedesktop.py  linux.py
menuinst/osx/: __init__.py  (+1 more)
news/: 112-add-docs  116-pre-commit  117-windows-associations  119-url-file-type-assoc  131-add-dev-docs  133-app-user-model-id  138-elevation  141-merge-cep-devel  144-add-canaries  145-move-cwp  151-v1-compat  153-capitalization  156-elevation  164-py312  168-fix-legacy-cwp  169-pydantic  175-render-menu-name  180-env-name-outside-base  180-support-different-names-outside-base  181-windows-shortcut-notes  183-event-handler  190-fix-docs-linkx  194-add-NSSupportsAutomaticGraphicsSwitching  200-windows-terminal-profile  201-linux-render-all-menu-name-placeholders  205-overwrite-shortcuts  206-file-extensions-regkey-access  212-improve-working-dir-handling  215-vs-version-canary-builds  218-only-delete-empty-menus  225-friendly-open-with  227-xdg-mime-default  236-update-python-versions-canary  237-add-setuptools-req  248-environment-example-typo  260-backport-v2-admin-to-v1  263-drop-py38-from-tests  265-add-singlemainwindow-support  272-quicklaunch  281-fields  (+29 more)
recipe/: conda_build_config.yaml  meta.yaml
src/: README.md  osx_launcher.c  resource.h  winshortcut.cpp
tests/: conftest.py  menu-windows.json  requirements-Linux.txt  requirements.txt  test_api.py  test_backwards_compatibility.py  test_cli.py  test_conda.py  test_conda_plugin.py  test_data.py  test_elevation.py  test_menu_creation.py  test_metadata.py  test_schema.py  test_utils.py  test_windows.py  test_windows_menu_item.py  test_windows_registry.py
wininst/: common.py  file_tools.py  wininst.c
(+43 files in other folders)
